# proneo_excel

./: .gitignore  Dockerfile  Info.plist  Proneo.spec  README.md  TODO  excel.py  proneo.icns  pyproject.toml  setup.py  test.py
config/: logger_config.py
data/: Plan et Rapport d'audit certification V32.xlsm  Plan et Rapport d'audit certification V33 bu.xlsm  Plan et Rapport d'audit certification V33.xlsm  excel_log.txt  test.xlsm  test.xlsx
modules/cells/: schemas.py
modules/checker/: checker.py
modules/checker/test/: test_checker.py
modules/condition/: __init__.py  condition.py  schemas.py
modules/excel/: __init__.py  excel.py  schemas.py
modules/excel/apple_script/: checkbox.scpt
modules/excel/test/: get_checkbox_state.py  get_sheets.py  is_hidden.py  is_list.py  is_list_2.py  is_signature.py  read_cells.py  write_cells.py  write_commentary.py
modules/params/: schemas.py
modules/performances/: schemas.py  time_counter.py
modules/qt/: qt.py
modules/qt/test/: watcher.py
modules/report/: __init__.py  report.py  schemas.py
modules/sheet/: schemas.py
modules/utils/: utils.py
test/VBA/: save_wba.py  save_wba_2.py
test/appel_script/: Plan et Rapport d'audit certification V32.xlsm  excel_checkbox_reader.py  test_checkbox.scpt
test/checkbox/: checkbox.py  checkbox2.py
test/macro/: macro.py
test/write/: write_commentary.py
