[tool.poetry]
name = "excel app"
version = "0.1.0"
description = "Description de votre application"
authors = ["Clement Remillieux <clement.remillieux@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.1" 
xlwings = "^0.31.10"
setuptools = "58.0.0"
wheel = "^0.43.0"
packaging = "^24.1"
pygobject = "3.42.2"
foundation = "^0.1.0a0.dev1"
appkit = "^0.2.8"
pyobjc = "^10.3.1"
pyobjc-core = "^10.3.1"
pyobjc-framework-cocoa = "^10.3.1"
python-dotenv = "^1.0.1"
pyautogui = "^0.9.54"
pydantic = "^2.8.2"
python-dateutil = "^2.9.0.post0"



[tool.poetry.dev-dependencies]
py2app = "^0.26"

[tool.poetry.group.dev.dependencies]
py2app = "^0.28.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
