[tool.poetry]
name = "excel app"
version = "0.1.0"
description = "Description de votre application"
authors = ["Clement Remillieux <clement.remillieux@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.1" 
xlwings = "^0.31.10"
setuptools = "58.0.0"
wheel = "^0.43.0"
packaging = "^24.1"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
python-dateutil = "^2.9.0.post0"
openpyxl = "^3.1.5"
pyinstaller = "^6.11.0"




[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
